[tool.poetry]
name = "2ppass"
version = "0.1.0"
description = ""
authors = ["Ksenia Travnikova <i@ksenia-travnikova.ru>"]
license = "CC BY-NC-SA 4.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
